--- a/src/documents/ueber-uns/alessandro-rodi.html
+++ b/src/documents/ueber-uns/alessandro-rodi.html
@@ -1,8 +1,7 @@
 ---
-name: Alessandro Rodi
+employee_name: Alessandro Rodi
 github: coorasse
 xing: Alessandro_Rodi
-image: alessandro
 email:
 job_title: Web-Engineer, B.Sc. CS
 job_title_break: Web-Engineer, B.Sc. CS
