--- a/src/documents/ueber-uns/alicia-rueegg.html
+++ b/src/documents/ueber-uns/alicia-rueegg.html
@@ -1,8 +1,7 @@
 ---
-name: Alicia Rüegg
+employee_name: Alicia Rüegg
 github: aliciarueegg
 xing:
-image: alicia
 email:
 job_title: Web-Developer
 job_title_break: Web-Developer
