--- a/src/documents/ueber-uns/alyssa-eguavoen.html
+++ b/src/documents/ueber-uns/alyssa-eguavoen.html
@@ -1,8 +1,7 @@
 ---
-name: Alyssa Eguavoen
+employee_name: Alyssa Eguavoen
 github: alyssaeguavoen
 xing:
-image: noface
 email:
 job_title: Administration
 job_title_break: Administration
