--- a/src/documents/ueber-uns/amina-giger.html
+++ b/src/documents/ueber-uns/amina-giger.html
@@ -1,8 +1,7 @@
 ---
-name: Amina Giger
+employee_name: Amina Giger
 github: aminagiger
 xing: Amina_Giger
-image: amina
 email:
 job_title: Online Marketing Consultant, HF
 job_title_break: Online Marketing Consultant, HF
