--- a/src/documents/ueber-uns/benjamin-boehm.html
+++ b/src/documents/ueber-uns/benjamin-boehm.html
@@ -1,8 +1,7 @@
 ---
-name: Benjamin Böhm
+employee_name: Benjamin Böhm
 github: benjaminbhm
 xing:
-image: benjamin
 email:
 job_title: Web-Developer
 job_title_break: Web-Developer
