--- a/src/documents/ueber-uns/cyril-kyburz.html
+++ b/src/documents/ueber-uns/cyril-kyburz.html
@@ -1,8 +1,7 @@
 ---
-name: Cyril Kyburz
+employee_name: Cyril Kyburz
 github: cyrilkyburz
 xing:
-image: cyril
 email:
 job_title: Web-Developer, Eidg. FZ Informatiker
 job_title_break: Web-Developer, Eidg. FZ Informatiker
