--- a/src/documents/ueber-uns/felix-kubli.html
+++ b/src/documents/ueber-uns/felix-kubli.html
@@ -1,8 +1,7 @@
 ---
-name: Felix Kubli
+employee_name: Felix Kubli
 github: felixkubli
 xing:
-image: felix
 email:
 job_title: Web-Developer
 job_title_break: Web-Developer
