--- a/src/documents/ueber-uns/josua-schmid.html
+++ b/src/documents/ueber-uns/josua-schmid.html
@@ -1,8 +1,7 @@
 ---
-name: Josua Schmid
+employee_name: Josua Schmid
 github: schmijos
 xing: Josua_Schmid3
-image: josua
 email:
 job_title: Web-Engineer, B.Sc. HSR CS
 job_title_break: Web-Engineer, B.Sc. HSR CS
