--- a/src/documents/ueber-uns/martin-cavoj.html
+++ b/src/documents/ueber-uns/martin-cavoj.html
@@ -1,8 +1,7 @@
 ---
-name: Martin Čavoj
+employee_name: Martin Čavoj
 github: macav
 xing:
-image: martin
 email:
 job_title: Web-Engineer, M.Sc. CS
 job_title_break: Web-Engineer, M.Sc. CS
