--- a/src/documents/ueber-uns/pascal-andermatt.html
+++ b/src/documents/ueber-uns/pascal-andermatt.html
@@ -1,8 +1,7 @@
 ---
-name: Pascal Andermatt
+employee_name: Pascal Andermatt
 github: pascalandermatt
 xing:
-image: pascal
 email:
 job_title: Web-Developer
 job_title_break: Web-Developer
