--- a/src/documents/ueber-uns/richard-buetzer.html
+++ b/src/documents/ueber-uns/richard-buetzer.html
@@ -1,8 +1,7 @@
 ---
-name: Richard Bützer
+employee_name: Richard Bützer
 github: rbuetzer
 xing:
-image: richard
 email:
 job_title: Web-Engineer, B.Sc. ETH CS
 job_title_break: Web-Engineer, B.Sc. ETH CS
