--- a/src/documents/ueber-uns/roger-ruettimann.html
+++ b/src/documents/ueber-uns/roger-ruettimann.html
@@ -1,8 +1,7 @@
 ---
-name: Roger Rüttimann
+employee_name: Roger Rüttimann
 github: rroger
 xing: Roger_Ruettimann
-image: roger
 email:
 job_title: Web-Engineer, B.Sc. ZFH CS
 job_title_break: Web-Engineer, B.Sc. ZFH CS
