--- a/src/documents/ueber-uns/samuel-steiner.html
+++ b/src/documents/ueber-uns/samuel-steiner.html
@@ -1,8 +1,7 @@
 ---
-name: Samuel Steiner
+employee_name: Samuel Steiner
 github: samuelsteiner
 xing: Samuel_Steiner3
-image: samuel
 email: samuel.steiner@renuo.ch
 job_title: Managing Partner, M.A. HSG
 job_title_break: 'Managing Partner<br>M.A. HSG'
