--- a/src/documents/ueber-uns/simon-huber.html
+++ b/src/documents/ueber-uns/simon-huber.html
@@ -1,8 +1,7 @@
 ---
-name: Simon Huber
+employee_name: Simon Huber
 github: sihu
 xing: Simon_Huber22
-image: simon
 email:
 job_title: Web-Engineer, B.Sc. HSR CS
 job_title_break: Web-Engineer, B.Sc. HSR CS
