--- a/src/documents/ueber-uns/zora-fuchs.html
+++ b/src/documents/ueber-uns/zora-fuchs.html
@@ -1,8 +1,7 @@
 ---
-name: Zora Fuchs
+employee_name: Zora Fuchs
 github: zorafuchs
 xing:
-image: zora
 email:
 job_title: Web-Developer, Eidg. FZ Informatikerin
 job_title_break: Web-Developer, Eidg. FZ Informatikerin
