--- a/src/documents/web-entwicklung/design.html
+++ b/src/documents/web-entwicklung/design.html
@@ -33,7 +33,7 @@ position: 1
 
 <div class="span3">
         <h2>Unser Partner</h2>
-        <div><%- @team_image_tag 'henry', 'Henry Gillis' %></div>
+        <div><img src='/images/portraits/henry-gillis.jpg' class='portrait' alt='Henry Gillis'/></div>
         <h4>Henry Gillis</h4>
 
 		<p>Web-Designer<br/>
