--- a/src/documents/ueber-uns/diego-steiner.html
+++ b/src/documents/ueber-uns/diego-steiner.html
@@ -1,8 +1,7 @@
 ---
-name: Diego P. Steiner
+employee_name: Diego P. Steiner
 github: diegosteiner
 xing: DiegoP_Steiner
-image: diego
 email: diego.steiner@renuo.ch
 job_title: Web-Engineer und Gründer, B.Sc. HSR CS
 job_title_break: Web-Engineer und Gründer<br>B.Sc. HSR CS
