--- a/src/documents/ueber-uns/nicolas-eckhart.html
+++ b/src/documents/ueber-uns/nicolas-eckhart.html
@@ -1,8 +1,7 @@
 ---
-name: Nicolas Eckhart
+employee_name: Nicolas Eckhart
 github: nicolaseckhart
 xing:
-image: nicolas
 email:
 job_title: Web-Developer, Eidg. FZ Informatiker
 job_title_break: Web-Developer, Eidg. FZ Informatiker
