--- a/src/documents/ueber-uns/patrik-peng.html
+++ b/src/documents/ueber-uns/patrik-peng.html
@@ -1,8 +1,7 @@
 ---
-name: Patrik Peng
+employee_name: Patrik Peng
 github: patrikpeng
 xing:
-image: patrik
 email:
 job_title: Web-Developer
 job_title_break: Web-Developer
