Add internship testimonials

--- a/src/documents/jobs/160803-ims-praktikum.html
+++ b/src/documents/jobs/160803-ims-praktikum.html
@@ -8,8 +8,52 @@ period: August 2017 - July 2018
 workload: 100%
 ---
 
+<div class="row-fluid testimonial-quotations">
+  <div class="span4">
+    <div class='testimonials-sentence'>
+      <p>“In meinem Praktikum in der Renuo AG habe ich nicht nur sehr viel über die Technologien, die wir für
+        Projekte benutzen, gelernt, sondern konnte mich auch in verschiedensten Technologien, die mich schon
+        immer interessierten, weiterbilden. Ich arbeitete mit einem tollen Team zusammen, das mich bei Problemen
+        unterstützte und mit welchem ich spannende und aufregende Events, wie das erklimmen eines Vulkans oder die
+        Teilnahme an einer spannenden Vorlesung an der ETH, erlebte. Ich bin sehr froh, dass ich mich damals für
+        dieses Praktikum entschieden hatte.”<br><br>September 2016</p>
+    </div>
+    <div><img class='testimonial-portraits' src='/images/testimonials/portrait_zora_fuchs.jpg' alt='Zora Fuchs' /></div>
+    <p>Zora Fuchs, <br>Software Developer bei Renuo<br><br></p>
+  </div>
 
-<div class="row-fluid">
+  <div class="span4">
+    <div class='testimonials-sentence'>
+      <p>“Die Renuo ist ein idealer Praktikumsbetrieb.
+
+        Ich wurde sofort als vollwertiges Mitglied ins junge kollegiale Team aufgenommen. Während meiner tollen Zeit,
+        durfte ich viel Verantwortung übernehmen und konnte hoch interessante Projekte realisieren!
+
+        Das Praktikum bei Renuo hat mich in meiner Berufswahl bestätigt, an welcher ich lange gezweifelt hatte.
+        Deshalb würde ich mich jederzeit wieder für Renuo entscheiden.”<br><br>September 2016</p>
+    </div>
+    <div><img class='testimonial-portraits' src='/images/testimonials/portrait_cyril_kyburz.jpg' alt='Cyril Kyburz' /></div>
+    <p>Cyril Kyburz, <br>Informatikstudent an der HSR<br><br></p>
+  </div>
+
+  <div class="span4">
+    <div class='testimonials-sentence'>
+      <p>“Die Renuo hat mich mit offenen Armen als neuen Mitarbeiter empfangen und mir alle Unterstützung gegeben
+        die ich brauchte."
+
+        - "Schon nach der ersten Woche wurde meine Meinung bei der Planung des nächsten Sprints berücksichtigt,
+        ich hatte bereits neue Features mit einem kleineren Kunden besprochen und meinen ersten Commit auf eine
+        Webapp deployed."
+
+        - "Durch die Open Source Mentalität der Renuo durfte ich Wissen und Erfahrungen in einer Vielzahl von
+        verschiedenen Technologien und Services sammeln.””<br><br>September 2016</p>
+    </div>
+    <div><img class='testimonial-portraits' src='/images/testimonials/portrait_nicolas_eckhart.jpg' alt='Nicolas Eckhart' /></div>
+    <p>Nicolas Eckhart, <br>Informatikstudent an der ZHAW<br><br></p>
+  </div>
+</div>
+
+<div class="row-fluid" style="margin-top: 30px;">
   <div class="span12">
     <h3>Wir bieten zwei IMS-Praktikumsstellen 2017/2018</h3>
     <p>Wir sind ein auf webbasierte Softwareentwicklung spezialisiertes Unternehmen, welches auf die individuelle Entwicklung von qualitativ
