Correct sentence format

--- a/src/documents/jobs/160803-ims-praktikum.html
+++ b/src/documents/jobs/160803-ims-praktikum.html
@@ -25,10 +25,8 @@ workload: 100%
   <div class="span4">
     <div class='testimonials-sentence'>
       <p>“Die Renuo ist ein idealer Praktikumsbetrieb.
-
         Ich wurde sofort als vollwertiges Mitglied ins junge kollegiale Team aufgenommen. Während meiner tollen Zeit,
         durfte ich viel Verantwortung übernehmen und konnte hoch interessante Projekte realisieren!
-
         Das Praktikum bei Renuo hat mich in meiner Berufswahl bestätigt, an welcher ich lange gezweifelt hatte.
         Deshalb würde ich mich jederzeit wieder für Renuo entscheiden.”<br><br>September 2016</p>
     </div>
@@ -39,14 +37,10 @@ workload: 100%
   <div class="span4">
     <div class='testimonials-sentence'>
       <p>“Die Renuo hat mich mit offenen Armen als neuen Mitarbeiter empfangen und mir alle Unterstützung gegeben
-        die ich brauchte."
-
-        - "Schon nach der ersten Woche wurde meine Meinung bei der Planung des nächsten Sprints berücksichtigt,
+        die ich brauchte. Schon nach der ersten Woche wurde meine Meinung bei der Planung des nächsten Sprints berücksichtigt,
         ich hatte bereits neue Features mit einem kleineren Kunden besprochen und meinen ersten Commit auf eine
-        Webapp deployed."
-
-        - "Durch die Open Source Mentalität der Renuo durfte ich Wissen und Erfahrungen in einer Vielzahl von
-        verschiedenen Technologien und Services sammeln.””<br><br>September 2016</p>
+        Webapp deployed. Durch die Open Source Mentalität der Renuo durfte ich Wissen und Erfahrungen in einer Vielzahl von
+        verschiedenen Technologien und Services sammeln.”<br><br>September 2016</p>
     </div>
     <div><img class='testimonial-portraits' src='/images/testimonials/portrait_nicolas_eckhart.jpg' alt='Nicolas Eckhart' /></div>
     <p>Nicolas Eckhart, <br>Informatikstudent an der ZHAW<br><br></p>
