--- a/src/documents/jobs/160803-ims-praktikum.html
+++ b/src/documents/jobs/160803-ims-praktikum.html
@@ -11,39 +11,63 @@ workload: 100%
 <div class="row-fluid testimonial-quotations">
   <div class="span4">
     <div class='testimonials-sentence'>
-      <p>“In meinem Praktikum in der Renuo AG habe ich nicht nur sehr viel über die Technologien, die wir für
+      <p>
+        “In meinem Praktikum in der Renuo AG habe ich nicht nur sehr viel über die Technologien, die wir für
         Projekte benutzen, gelernt, sondern konnte mich auch in verschiedensten Technologien, die mich schon
-        immer interessierten, weiterbilden. Ich arbeitete mit einem tollen Team zusammen, das mich bei Problemen
+        immer interessierten, weiterbilden.<br><br>
+        Ich arbeitete mit einem tollen Team zusammen, das mich bei Problemen
         unterstützte und mit welchem ich spannende und aufregende Events, wie das erklimmen eines Vulkans oder die
-        Teilnahme an einer spannenden Vorlesung an der ETH, erlebte. Ich bin sehr froh, dass ich mich damals für
-        dieses Praktikum entschieden hatte.”<br><br>September 2016</p>
+        Teilnahme an einer spannenden Vorlesung an der ETH, erlebte.<br><br>
+        Ich bin sehr froh, dass ich mich damals für dieses Praktikum entschieden hatte.”<br><br>
+        September 2016
+      </p>
     </div>
     <div><img class='testimonial-portraits' src='/images/testimonials/portrait_zora_fuchs.jpg' alt='Zora Fuchs' /></div>
-    <p>Zora Fuchs, <br>Software Developer bei Renuo<br><br></p>
+    <p>
+      Zora Fuchs,<br>
+      Software Developer bei Renuo<br><br>
+      Absolvierte 2015-2016 das IMS Praktikum bei der Renuo<br><br>
+    </p>
   </div>
 
   <div class="span4">
     <div class='testimonials-sentence'>
-      <p>“Die Renuo ist ein idealer Praktikumsbetrieb.
-        Ich wurde sofort als vollwertiges Mitglied ins junge kollegiale Team aufgenommen. Während meiner tollen Zeit,
-        durfte ich viel Verantwortung übernehmen und konnte hoch interessante Projekte realisieren!
+      <p>
+        “Die Renuo ist ein idealer Praktikumsbetrieb.<br><br>
+        Ich wurde sofort als vollwertiges Mitglied ins junge, kollegiale Team aufgenommen. Während meiner tollen Zeit
+        durfte ich viel Verantwortung übernehmen und konnte hoch interessante Projekte realisieren!<br><br>
         Das Praktikum bei Renuo hat mich in meiner Berufswahl bestätigt, an welcher ich lange gezweifelt hatte.
-        Deshalb würde ich mich jederzeit wieder für Renuo entscheiden.”<br><br>September 2016</p>
+        Deshalb würde ich mich jederzeit wieder für Renuo entscheiden.”<br><br>
+        September 2016
+      </p>
     </div>
     <div><img class='testimonial-portraits' src='/images/testimonials/portrait_cyril_kyburz.jpg' alt='Cyril Kyburz' /></div>
-    <p>Cyril Kyburz, <br>Informatikstudent an der HSR<br><br></p>
+    <p>
+      Cyril Kyburz,<br>
+      Informatikstudent an der HSR<br><br>
+      Absolvierte 2014-2015 das IMS Praktikum bei der Renuo<br><br>
+    </p>
   </div>
 
   <div class="span4">
     <div class='testimonials-sentence'>
-      <p>“Die Renuo hat mich mit offenen Armen als neuen Mitarbeiter empfangen und mir alle Unterstützung gegeben
-        die ich brauchte. Schon nach der ersten Woche wurde meine Meinung bei der Planung des nächsten Sprints berücksichtigt,
+      <p>
+        “Die Renuo hat mich mit offenen Armen als neuen Mitarbeiter empfangen und mir alle Unterstützung gegeben
+        die ich brauchte.<br><br>
+        Schon nach der ersten Woche wurde meine Meinung bei der Planung des nächsten Sprints berücksichtigt,
         ich hatte bereits neue Features mit einem kleineren Kunden besprochen und meinen ersten Commit auf eine
-        Webapp deployed. Durch die Open Source Mentalität der Renuo durfte ich Wissen und Erfahrungen in einer Vielzahl von
-        verschiedenen Technologien und Services sammeln.”<br><br>September 2016</p>
+        Webapp deployed.<br><br>
+        Durch die Open Source Mentalität der Renuo durfte ich Wissen und Erfahrungen in einer Vielzahl von
+        verschiedenen Technologien und Services sammeln.”<br><br>
+        September 2016
+      </p>
     </div>
     <div><img class='testimonial-portraits' src='/images/testimonials/portrait_nicolas_eckhart.jpg' alt='Nicolas Eckhart' /></div>
-    <p>Nicolas Eckhart, <br>Informatikstudent an der ZHAW<br><br></p>
+    <p>
+      Nicolas Eckhart,<br>
+      Informatikstudent an der ZHAW<br><br>
+      Absolvierte 2014-2015 das IMS Praktikum bei der Renuo<br><br>
+    </p>
   </div>
 </div>
 
