--- a/src/documents/jobs/160803-ims-praktikum.html
+++ b/src/documents/jobs/160803-ims-praktikum.html
@@ -92,10 +92,10 @@ workload: 100%
 <div class="row-fluid" style="margin-top: 30px;">
   <div class="span12">
     <h3>Wir bieten zwei IMS-Praktikumsstellen 2017/2018</h3>
-    <p>Wir sind ein auf webbasierte Softwareentwicklung spezialisiertes Unternehmen, welches auf die individuelle Entwicklung von qualitativ
-    hochwertigen Applikationen fokussiert. Mit modernen Web-Technologien (Schwerpunkte Ruby on Rails, AngularJS, HTML5, Javascript)
-    entwickeln wir sowohl kleinere Internetauftritte als auch komplexe Portale, welche diverse Schnittstellen beinhalten. Zur Verstärkung
-    unseres Teams suchen wir ab August 2017 für die Dauer eines Jahres zwei Praktikanten.</p>
+    <p>Wir sind ein auf webbasierte Softwareentwicklung spezialisiertes Unternehmen, welches sich auf die individuelle Entwicklung von
+    qualitativ hochwertigen Applikationen fokussiert. Mit modernen Web-Technologien (Schwerpunkte Ruby on Rails, AngularJS, HTML5,
+    Javascript) entwickeln wir sowohl kleinere Internetauftritte als auch komplexe Portale, welche diverse Schnittstellen beinhalten.
+    Zur Verstärkung unseres Teams suchen wir ab August 2017 für die Dauer eines Jahres zwei Praktikanten.</p>
   </div>
 </div>
 
