disable job announcements for zurich office

--- a/src/documents/jobs/151118-back-end-open-source-web-engineer.html
+++ b/src/documents/jobs/151118-back-end-open-source-web-engineer.html
@@ -3,7 +3,7 @@ layout: jobs
 title: Back-End Open-Source Software Engineer
 description: Jobs at Renuo
 position: 3
-tags: ['jobs', 'jobs-online-zurich']
+tags: ['jobs-disabled', 'jobs-online-zurich-disabled']
 period: Permanently, as of now
 workload: 80-100%
 ---
