--- a/src/documents/jobs/151118-full-stack-open-source-web-engineer.html
+++ b/src/documents/jobs/151118-full-stack-open-source-web-engineer.html
@@ -3,7 +3,7 @@ layout: jobs
 title: Full-Stack Open-Source Software Engineer
 description: Jobs at Renuo
 position: 1
-tags: ['jobs', 'jobs-online-zurich', 'jobs-online-st-gallen']
+tags: ['jobs', 'jobs-online-zurich-disabled', 'jobs-online-st-gallen']
 period: Permanently, as of now
 workload: 80-100%
 ---
