-add image -correct code

--- a/src/documents/referenzen/greencard-predictor.html
+++ b/src/documents/referenzen/greencard-predictor.html
@@ -13,9 +13,12 @@ slider:
         image_alt: Die Startseite des Greencard Predictors
         title: Eingabefelder für die Wahrscheinlichkeitsberechnung
         subtitle: Die Applikation benötigt diverse Angaben zur Person, um die Chancen auf eine US-Greencard zu berechnen.
-
+    -
+        image: /images/tamedia/predictor-2.jpg
+        image_alt: Das Resultat des Greencard Predictors
+        title: Der Greencard Predictor berechnet die Wahrscheinlichkeit
+        subtitle: Nach wenigen Augenblicken erhält man sein persönliches Resultat.
 ---
-<br>
 
 
 <div class="row-fluid">
@@ -32,7 +35,6 @@ slider:
         <h2>Umsetzung</h2>
 
         <div>
-            <p></p>
 			<p>Das Backend der Applikation wurde mit Python (Flask und SciPy) und das Frontend mit <a href="/web-entwicklung/rubyonrails/">JQuery 3</a>, Bootstrap 4, HTML5 und CSS3 realisiert.</p>
 			<p>Barnaby Skinner, unser Auftraggeber, ist ein Datenjournalist vom Tagesanzeiger. An einer Weiterbildung der Massachusetts Institute of Technology ist er mit “Machine Learning” in Kontakt getreten. Er war von dem Thema so fasziniert, dass er beschloss, die Greencard-Anträge der USA genauer zu untersuchen. Seine Erkenntnisse wollte er in einem interaktiven Widget festhalten und veröffentlichen.</p>
 			<p>Eine Besonderheit während der Entwicklung war, dass wir das akademische Wissen zu “Machine Learning” brauchten, um das 1GB grosse Vorhersagemodell zu realisieren.</p>
