--- a/src/documents/referenzen/greencard-predictor.html
+++ b/src/documents/referenzen/greencard-predictor.html
@@ -35,7 +35,7 @@ slider:
         <h2>Umsetzung</h2>
 
         <div>
-			<p>Das Backend der Applikation wurde mit Python (Flask und SciPy) und das Frontend mit <a href="/web-entwicklung/rubyonrails/">JQuery 3</a>, Bootstrap 4, HTML5 und CSS3 realisiert.</p>
+			<p>Das Backend des Projekts wurde mit Python (Flask und SciPy) und das Frontend mit <a href="/web-entwicklung/rubyonrails/">JQuery 3</a>, Bootstrap 4, HTML5 und CSS3 realisiert.</p>
 			<p>Barnaby Skinner, unser Auftraggeber, ist ein Datenjournalist vom Tagesanzeiger. An einer <a href="http://ledeprogram.com/">Weiterbildung</a> an der Columbia School of Journalism in New York, ist er mit “Machine Learning” in Kontakt getreten. Er war von dem Thema so fasziniert, dass er beschloss, die Greencard-Anträge der USA genauer zu untersuchen. Seine Erkenntnisse wollte er in einem interaktiven Widget festhalten und veröffentlichen.</p>
 			<p>Eine Besonderheit während der Entwicklung war, dass wir das akademische Wissen zu “Machine Learning” brauchten, um das 1GB grosse Vorhersagemodell zu realisieren.</p>
         </div>
