add stackoverflow to profile

--- a/src/documents/ueber-uns/alessandro-rodi.html
+++ b/src/documents/ueber-uns/alessandro-rodi.html
@@ -2,6 +2,7 @@
 employee_name: Alessandro Rodi
 github: coorasse
 xing: Alessandro_Rodi
+stack_overflow: 837638/coorasse
 email:
 job_title: Web-Engineer, B.Sc. CS
 job_title_break: Web-Engineer, B.Sc. CS
