--- a/src/documents/ueber-uns/diego-steiner.html
+++ b/src/documents/ueber-uns/diego-steiner.html
@@ -1,6 +1,7 @@
 ---
 employee_name: Diego P. Steiner
 xing: DiegoP_Steiner
+stack_overflow: 4057656/diego-steiner
 email: diego.steiner@renuo.ch
 job_title: Web-Engineer und Gründer, B.Sc. HSR CS
 job_title_break: Web-Engineer und Gründer<br>B.Sc. HSR CS
