--- a/src/documents/ueber-uns/josua-schmid.html
+++ b/src/documents/ueber-uns/josua-schmid.html
@@ -2,6 +2,7 @@
 employee_name: Josua Schmid
 github: schmijos
 xing: Josua_Schmid3
+stack_overflow: 430418/schmijos
 job_title: Web-Engineer, B.Sc. HSR CS
 job_title_break: Web-Engineer, B.Sc. HSR CS
 tags: ['employee']
