--- a/src/documents/ueber-uns/lukas-elmer.html
+++ b/src/documents/ueber-uns/lukas-elmer.html
@@ -1,6 +1,7 @@
 ---
 employee_name: Lukas Elmer
 xing: Lukas_Elmer
+stack_overflow: 1181505/lukas-elmer
 email: lukas.elmer@renuo.ch
 job_title: 'Web-Engineer und Gründer, M.Sc. ETH CS, B.Sc. HSR CS, <a href="http://www.pk19.ch/">Experte PK19</a>'
 job_title_break: 'Web-Engineer und Gründer<br>M.Sc. ETH CS, B.Sc. HSR CS, <a href="http://www.pk19.ch/">Experte PK19</a>'
