add stackoverflow account of simon

--- a/src/documents/ueber-uns/simon-huber.html
+++ b/src/documents/ueber-uns/simon-huber.html
@@ -2,6 +2,7 @@
 employee_name: Simon Huber
 github: sihu
 xing: Simon_Huber22
+stack_overflow: 1681669/sihu
 job_title: Web-Engineer, B.Sc. HSR CS
 job_title_break: Web-Engineer, B.Sc. HSR CS
 tags: ['employee']
