update link to food-survey

--- a/src/documents/referenzen/essrechner.html
+++ b/src/documents/referenzen/essrechner.html
@@ -64,7 +64,7 @@ slider:
             <p>Ansprechperson: Barnaby Skinner<br>
                Kontakt <a href="http://barnabyskinner.com/">barnabyskinner.com</a></p>
 
-            <p>Link: <a href="https://essrechner.tagesanzeiger.ch/">https://essrechner.tagesanzeiger.ch</a></p>
+            <p>Link: <a href="https://food-survey-develop.renuoapp.ch/">https://essrechner.tagesanzeiger.ch/</a></p>
                   <p>Die Partnerschaft war ein einmaliger Auftrag und dauerte von Dezember 2014 bis Dezember 2015.</p>
 
             <div><img src="/images/logoslider/tamedia_logo.png" alt="Logo Tamedia"></div>
