Update greencard-predictor.html (#242)

--- a/src/documents/referenzen/greencard-predictor.html
+++ b/src/documents/referenzen/greencard-predictor.html
@@ -52,7 +52,7 @@ slider:
             <p>Ansprechperson: Barnaby Skinner<br>
                Kontakt <a href="http://barnabyskinner.com/">barnabyskinner.com</a></p>
 
-            <p>Link: <a href="http://green-card-probability-frontend.renuoapp.ch/">http://green-card-probability-frontend.renuoapp.ch/</a></p>
+            <p>Link: <a href="https://green-card-probability-frontend.renuoapp.ch/">https://green-card-probability-frontend.renuoapp.ch/</a></p>
                   <p>Die Partnerschaft dauert von 2014 bis heute.</p>
 
             <div><img src="/images/logoslider/tamedia_logo.png" alt="Logo Tamedia"></div>
