--- a/src/documents/jobs/product-owner.html
+++ b/src/documents/jobs/product-owner.html
@@ -3,7 +3,7 @@ layout: jobs
 title: Product Owner / Sales
 description: Jobs at Renuo
 position: 1
-tags: ['jobs', 'jobs-online-zurich']
+tags: ['jobs-disabled', 'jobs-online-zurich-disabled']
 period: Permanently, as of now
 workload: 80-100%
 ---
