Remove job ad for admin (#246)
* Remove job ad for admin

* Work with numbers, stick to numbers

--- a/src/documents/jobs/170124-administration.html
+++ b/src/documents/jobs/170124-administration.html
@@ -3,7 +3,7 @@ layout: jobs
 title: Sachbearbeiter/in Administration
 description: Jobs at Renuo
 position: 1
-tags: ['jobs', 'jobs-online-zurich']
+tags: ['jobs-disabled', 'jobs-online-zurich-disabled']
 period: per 1. August 2017 oder nach Vereinbarung
 workload: 60-100%
 ---
