--- a/src/documents/jobs/170405-administration.html
+++ b/src/documents/jobs/170405-administration.html
@@ -1,6 +1,6 @@
 ﻿--- yaml
 layout: jobs
-title: Sachbearbeiter/in Administration
+title: Leitung Finanzen & Administration
 description: Jobs at Renuo
 position: 1
 tags: ['jobs-disabled', 'jobs-online-zurich-disabled']
@@ -12,10 +12,9 @@ workload: 60-100%
   <div class="span12">
     <p>Die Renuo AG ist auf webbasierte Softwareentwicklung spezialisiert und fokussiert
     sich auf die individuelle Entwicklung von qualitativ hochwertigen Applikationen.
-    Mit modernen Web-Technologien entwickeln wir sowohl kleinere Internetauftritte als
-    auch komplexe Portale.</p>
-    <p>Zur Unterstützung unseres Teams suchen wir eine motivierte und selbstständige
-    Persönlichkeit als Sachbearbeiter/in Administration.</p>
+    Mit modernen Web-Technologien entwickeln wir für Startups, als auch grosse Firmen in der Schweiz und Deutschland mobile und Webapplikationen. Aufgrund unserer Internationalität kommunizieren wir intern in Englisch.</p>
+    <p>Zur Unterstützung unseres Teams suchen wir eine/n motivierte/n und selbstständige/n
+    Kollegen/Kollegin, welche die Geschäftsleitung unterstützt und sowohl Administration (Innendienst), als auch Buchhaltung selbständig erledigt.</p>
   </div>
 </div>
 
@@ -23,11 +22,10 @@ workload: 60-100%
   <div class="span4">
     <h3>Deine Aufgaben</h3>
     <ul class="icons-ul">
-      <li><i class="icon-li icon-ok"></i> Du bist zuständig für die Bearbeitung der Debitoren-, Kreditoren- und Lohnbuchhaltung</li>
+      <li><i class="icon-li icon-ok"></i> Du führst die komplette Buchhaltung (Löhne, Deb, Kred, soziale Vers., MWST, etc.) selbständig</li>
       <li><i class="icon-li icon-ok"></i> Du bedienst das Telefon und führst Korrespondenzen mit Kunden und Partner</li>
       <li><i class="icon-li icon-ok"></i> Du erledigst allgemeine Administrationsarbeiten (Versand Rechnungen, Büromaterial, Post, Ablage)</li>
       <li><i class="icon-li icon-ok"></i> Du organisierst Kunden-Events und interne Veranstaltungen</li>
-      <li><i class="icon-li icon-ok"></i> Du hilfst bei der Pflege der Webseite und der Social-Media-Kanäle</li>
       <li><i class="icon-li icon-ok"></i> Du unterstützt die Geschäftsleitung in administrativen Belangen</li>
     </ul>
   </div>
@@ -49,13 +47,14 @@ workload: 60-100%
   <div class="span4">
     <h3>Was erwarten wir?</h3>
     <ul class="icons-ul">
-      <li><i class="icon-li icon-ok"></i> Du verfügst über eine abgeschlossene, kaufmännische Grundausbildung</li>
-      <li><i class="icon-li icon-ok"></i> Du bringst mindestens drei Jahre Berufserfahrung in einer ähnlichen Position mit</li>
+      <li><i class="icon-li icon-ok"></i> Du verfügst mind. über eine KV-Lehre EFZ und/oder hast ein Studium im betriebswirtschaftlichen Bereich</li>
+      <li><i class="icon-li icon-ok"></i> Du bringst mindestens drei Jahre Berufserfahrung in ähnlichen Tätigkeiten mit</li>
       <li><i class="icon-li icon-ok"></i> Du bist motiviert und arbeitest gerne selbstständig</li>
       <li><i class="icon-li icon-ok"></i> Du bist belastbar und verfügst über eine rasche Auffassungsgabe</li>
       <li><i class="icon-li icon-ok"></i> Du bist aufgeschlossen und teamorientiert</li>
       <li><i class="icon-li icon-ok"></i> Du hast ein professionelles Erscheinungsbild</li>
       <li><i class="icon-li icon-ok"></i> Du verfügst über einwandfreie EDV-, Deutsch- und Englischkenntnisse</li>
+      <li><i class="icon-li icon-ok"></i> Du sprichst fliessend (Schweizer-)Deutsch und Englisch</li>
     </ul>
   </div>
 </div>
