Adapt admin/bookkeeping job ad (#251)
* Adapt admin/bookkeeping job ad

* Typo

--- a/src/documents/jobs/170405-administration.html
+++ b/src/documents/jobs/170405-administration.html
@@ -1,9 +1,9 @@
 ﻿--- yaml
 layout: jobs
-title: Leitung Finanzen & Administration
+title: Leitung Buchhaltung & Administration
 description: Jobs at Renuo
 position: 1
-tags: ['jobs-disabled', 'jobs-online-zurich-disabled']
+tags: ['jobs', 'jobs-online-zurich']
 period: per 1. August 2017 oder nach Vereinbarung
 workload: 60-100%
 ---
@@ -14,7 +14,7 @@ workload: 60-100%
     sich auf die individuelle Entwicklung von qualitativ hochwertigen Applikationen.
     Mit modernen Web-Technologien entwickeln wir für Startups, als auch grosse Firmen in der Schweiz und Deutschland mobile und Webapplikationen. Aufgrund unserer Internationalität kommunizieren wir intern in Englisch.</p>
     <p>Zur Unterstützung unseres Teams suchen wir eine/n motivierte/n und selbstständige/n
-    Kollegen/Kollegin, welche die Geschäftsleitung unterstützt und sowohl Administration (Innendienst), als auch Buchhaltung selbständig erledigt.</p>
+    Kollegen/Kollegin, welche sowohl Buchhaltung und Administration (Innendienst) selbständig erledigt als auch die Geschäftsleitung unterstützt.</p>
   </div>
 </div>
 
@@ -40,7 +40,8 @@ workload: 60-100%
       <li><i class="icon-li icon-ok"></i> Ein junges und sehr motiviertes Team</li>
       <li><i class="icon-li icon-ok"></i> Einen modern ausgerüsteten Arbeitsplatz mit zeitgemässer Infrastruktur</li>
       <li><i class="icon-li icon-ok"></i> Einen zentralen Arbeitsort direkt beim Bahnhof Wallisellen</li>
-      <li><i class="icon-li icon-ok"></i> Goodies und Events</li>
+      <li><i class="icon-li icon-ok"></i> Investment-Time: Investiere 20% Deiner Arbeitszeit frei in deine persönliche Weiterentwicklung</li>
+      <li><i class="icon-li icon-ok"></i> <a href="/jobs#more-goodies">Goodies und Events</a></li>
     </ul>
   </div>
 
@@ -49,12 +50,7 @@ workload: 60-100%
     <ul class="icons-ul">
       <li><i class="icon-li icon-ok"></i> Du verfügst mind. über eine KV-Lehre EFZ und/oder hast ein Studium im betriebswirtschaftlichen Bereich</li>
       <li><i class="icon-li icon-ok"></i> Du bringst mindestens drei Jahre Berufserfahrung in ähnlichen Tätigkeiten mit</li>
-      <li><i class="icon-li icon-ok"></i> Du bist motiviert und arbeitest gerne selbstständig</li>
-      <li><i class="icon-li icon-ok"></i> Du bist belastbar und verfügst über eine rasche Auffassungsgabe</li>
-      <li><i class="icon-li icon-ok"></i> Du bist aufgeschlossen und teamorientiert</li>
-      <li><i class="icon-li icon-ok"></i> Du hast ein professionelles Erscheinungsbild</li>
-      <li><i class="icon-li icon-ok"></i> Du verfügst über einwandfreie EDV-, Deutsch- und Englischkenntnisse</li>
-      <li><i class="icon-li icon-ok"></i> Du sprichst fliessend (Schweizer-)Deutsch und Englisch</li>
+      <li><i class="icon-li icon-ok"></i> Du kommunizierst problemlos in Deutsch und Englisch mit Kunden und Kollegen</li>
     </ul>
   </div>
 </div>
