--- a/src/documents/web-entwicklung/design.html
+++ b/src/documents/web-entwicklung/design.html
@@ -17,101 +17,68 @@ position: 1
 </div>
 
 <div class="row-fluid page-section">
-
     <div class="span2" align="center">
         <h4>Design</h4>
         <img src="/images/design_small.png">
     </div>
-
     <div class="span10">
         <br/><p>Die Renuo konzentriert sich ausschliesslich auf ihre Kernkompetenzen, nämlich webbasierte Softwareentwicklung. Aus diesem Grund machen wir das Design nicht selbst, sondern nutzen unser Netzwerk! In zahlreichen Projekten haben wir bereits mit <a href="http://henrygillis.com/">Henry Gillis</a> aus Zürich zusammengearbeitet. Henry Gillis entwickelt und gestaltet qualitativ hochwertige Designs, bei denen der Fokus stets auf einer guten Nutzerführung liegt.</p>
     </div>
+</div>
 
+<div class="row-fluid page-header-element">
+    <div class="span12">
+        <div class="page-header">
+        <h2>Unser Partner
+            <small>Art Director und Interaction Designer Henry Gillis</small>
+        </h2>
+        </div>
+    </div>
 </div>
 
 <div class="row-fluid page-section">
-
-<div class="span3">
-        <h2>Unser Partner</h2>
-        <div><img src='/images/portraits/henry-gillis.jpg' class='portrait' alt='Henry Gillis'/></div>
-        <h4>Henry Gillis</h4>
-
-        <p>Web-Designer<br/>
-        <br/>
-
-        <div data-collapse>
-            <h4 class="profile-collapse-summary"><i class="icon-collapse"></i> Kurzprofil</h4>
-            <div>
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>Jahr</th>
-                        <th>Aktivität</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <th>2008-jetzt</th>
-                        <td><strong>Art Director / Interaction Designer</strong> <a href="http://henrygillis.com/">(selbständig)</a></td>
-                    </tr>
-                    <tr>
-                        <th>2009-2012</th>
-                        <td><strong>Graphic Designer</strong> allink GmbH</td>
-                    </tr>
-                    <tr>
-                        <th>2008-2009</th>
-                        <td><strong>Graphic Designer</strong> Studio Elfenbein (Hamburg)</td>
-                    </tr>
-                    <tr>
-                        <th>2006-2009</th>
-                        <td>Eidg. zert. Grafiker <strong>Hochschule Luzern</strong></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
+    <div class="span2" align="center">
+        <img src="/images/portraits/henry-gillis.jpg" alt="Henry Gillis">
     </div>
 
-    <div class="span9">
-        <h2>Leis&shy;tungs&shy;spek&shy;trum</h2>
-        <div>
-            <p>Das Leistungsspektrum, welches über die Renuo bzw. Henry Gillis bezogen werden kann, umfasst folgendes:
+    <div class="span10" >
+        <br/>
+            <p>Henry Gillis ist ein kreativer Kopf, welcher seit 2008 selbständig
+               Design-Lösungen fürs Web & Print entwickelt. Henry Gillis gestaltet
+               Webauftritte nach Mass. Dabei stehen Qualität, Kreativität und Bedienbarkeit
+               im Vordergrund.</p>
+            <p>Jedes Projekt ist unterschiedlich, einzigartig und benötigt individuelle
+               Betreuung. Henry Gillis bietet keine fixfertigen Produkte, sondern
+               konzentriert sich auf das, was wirklich zählt: Den Endkunden. Gemeinsam mit
+               Ihnen wird die passende Lösung gefunden, entworfen und durch die Renuo
+               entwickelt. Somit erreichen Sie eine individuelle, auf Ihr Vorhaben
+               zugeschnittene Lösung.</p>
+            <p>Das Leistungsspektrum, welches über die Renuo bzw. Henry Gillis bezogen
+               werden kann, umfasst folgendes:</p>
             <ul class="icons-ul">
                 <li><i class="icon-li icon-ok"></i>Responsive WebDesign</li>
                 <li><i class="icon-li icon-ok"></i>Interaction Design & Usability</li>
                 <li><i class="icon-li icon-ok"></i>Corporate Design</li>
                 <li><i class="icon-li icon-ok"></i>Art Direction</li>
                 <li><i class="icon-li icon-ok"></i>Illustration</li>
-            </ul></p>
-        </div>
-        <br/><br/>
-        <h2>Über Henry Gillis</h2>
-        <div>
-        <p>Wir kennen Henry Gillis aus unserer Sekundarschulzeit. Henry Gillis ist ein kreativer Kopf, welcher seit 2008 selbständig Design-Lösungen fürs Web & Print entwickelt. Henry Gillis gestaltet Webauftritte nach Mass. Dabei stehen Qualität, Kreativität und Bedienbarkeit im Vordergrund.</p>
-              <p>Jedes Projekt ist unterschiedlich, einzigartig und benötigt individuelle Betreuung. Henry Gillis bietet keine fixfertigen Produkte, sondern konzentriert sich auf das, was wirklich zählt: Den Endkunden. Gemeinsam mit Ihnen wird die passende Lösung gefunden, entworfen und durch die Renuo entwickelt. Somit erreichen Sie eine individuelle, auf Ihr Vorhaben zugeschnittene Lösung.</p>
-        </div>
+          </ul>
     </div>
-
-
 </div>
 
-<!-- <div class="row-fluid">
+
+<div class="row-fluid">
     <div class="span12">
         <div class="page-header">
-            <h1>Zusammenarbeit
+            <h2>Zusammenarbeit
                 <small>und bereits realisierte Projekte</small>
-            </h1>
-            <p>Die Renuo und die Webeo haben bereits zahlreiche Projekte in gemeinsamer Arbeit realisiert. Nachfolgend einige Beispiele:</p>
+            </h2>
+            <p>Die Renuo und Henry Gillis haben bereits zahlreiche Projekte in gemeinsamer Arbeit realisiert. Nachfolgend einige Beispiele:</p>
         </div>
     </div>
 </div>
 
 <div class="row-fluid page-section">
     <div class="span4">
-        <a href="/referenzen/shariando"><img src="/images/shariando/shariando2.png"></a>
+        <a href="/referenzen/lawoon"><img src="/images/lawoon/lawoon.jpg"></a>
     </div>
-</div> -->
-
-
-
+</div>
